      eager loading was applied on those subsequent queries.
    - added query.with_parent(someinstance) method.  searches for
      target instance using lazy join criterion from parent instance.
      takes optional string "property" to isolate the desired relation.
      also adds static Query.query_from_parent(instance, property)
      version. [ticket:541]
    - corresponding to label/bindparam name generataion, eager loaders 
      generate deterministic names for the aliases they create using 
      md5 hashes.
    - improved/fixed custom collection classes when giving it "set"/
      "sets.Set" classes or subclasses (was still looking for append()
      methods on them during lazy loads)
    - fix to many-to-many relationships targeting polymorphic mappers
      [ticket:533]
    - making progress with session.merge() as well as combining its
      usage with entity_name [ticket:543]
- informix:
    - informix support added !  courtesy James Zhang, who put a ton
      of effort in.
- sqlite:
    - removed silly behavior where sqlite would reflect UNIQUE indexes
      as part of the primary key (?!)
- oracle:
    - small fix to allow successive compiles of the same SELECT object
      which features LIMIT/OFFSET.  oracle dialect needs to modify
      the object to have ROW_NUMBER OVER and wasn't performing 
      the full series of steps on successive compiles.
- mysql
    - support for SSL arguments given as inline within URL query string,
      prefixed with "ssl_", courtesy terjeros@gmail.com.
- extensions
    - big fix to AssociationProxy so that multiple AssociationProxy
      objects can be associated with a single association collection. 
    - assign_mapper names methods according to their keys (i.e. __name__)
      #551
0.3.6
- sql:
    - bindparam() names are now repeatable!  specify two
      distinct bindparam()s with the same name in a single statement,
      and the key will be shared.  proper positional/named args translate